--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.4",
+    "@repo/redux-utils": "*",
     "@repo/ui": "*",
     "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-color": "^2.4.0",
@@ -20,7 +22,8 @@
     "jspdf": "^2.5.1",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
