--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^14.2.4",
     "@repo/redux-utils": "*",
     "@repo/ui": "*",
+    "@repo/db": "*",
     "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-list-item": "^2.4.0",
